# cloud-messaging-cli

./: .gitignore  LICENSE  README.md  artifacts.sh  bigquery.py  cloud-storage.py  gcpcli.py  gcpcli.sh  main.py  pubsub.py  pyproject.toml
docs/: artifacts.md  bigquery.md  cli-interfaces.md  cloud-storage.md  pubsub.md
examples/: README.md  complex_schema_example.json  schema_example.json
examples/bigquery/: README.md  simple_json_schema.json  simple_schema.bigsql  simple_schema.csv
gcptoolkit/: cloud-storage.py  pubsub.py
scripts/: artifacts.sh  login.sh
